data/derived/comb/progs/unify/prog7782.ml.out
Characters 86-88:
  let f a x = a ^ x ^ sl in
                      ^^
Error: This expression has type 'a list
       but an expression was expected of type string
